get posts from chatterbox-post-service and return most recent 10 posts